--- a/scoreboard/templates/admin/pages/tournament_admin.html.j2
+++ b/scoreboard/templates/admin/pages/tournament_admin.html.j2
@@ -72,6 +72,9 @@
 		          Set a message to be displayed on the tournament page. This can be used for announcements, changes to the schedule or important information
 		          like what time the beer will be served at the banquet.
 		        </p>
+						<p class="text-muted">
+							You can embed links with the markdown syntax: (text)[https://url.com]
+						</p>
 		      </div>
 		    </div>
 
