Markdown help fix
Markdown link help had the syntax backwards.

--- a/scoreboard/templates/admin/pages/tournament_admin.html.j2
+++ b/scoreboard/templates/admin/pages/tournament_admin.html.j2
@@ -73,7 +73,7 @@
 		          like what time the beer will be served at the banquet.
 		        </p>
 						<p class="text-muted">
-							You can embed links with the markdown syntax: (text)[https://url.com]
+							You can embed links with the markdown syntax: [text](https://url.com)
 						</p>
 		      </div>
 		    </div>
