Spelling is hard

--- a/scoreboard/templates/admin/pages/tournament_admin.html.j2
+++ b/scoreboard/templates/admin/pages/tournament_admin.html.j2
@@ -59,7 +59,7 @@
 		      </div>
 		      <div class="card-body">
 						<div id="bannerPreview" class="alert alert-info" role="alert" {{ "visible" if site_message else "hidden" }}>
-							<h4 class="alert-heading">Annoucement: <span id="bannerPreviewText">{{ site_message }}</span></h4>
+							<h4 class="alert-heading">Announcement: <span id="bannerPreviewText">{{ site_message }}</span></h4>
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-text">
