--- a/scoreboard/templates/pages/tournament.html.j2
+++ b/scoreboard/templates/pages/tournament.html.j2
@@ -21,7 +21,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="alert alert-info" role="alert">
-				<h4 class="alert-heading">Annoucement: {{ site_message }}</h4>
+				<h4 class="alert-heading">Announcement: {{ site_message }}</h4>
 			</div>
 		</div>
 	</div>
